--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Aclonica&family=Dancing+Script&family=Eczar&family=Niconne&family=Oswald&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="shortcut icon" href="images/aromusk-logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/3031bdf29d.js" crossorigin="anonymous"></script>
     <title>Aromusk | Product Landing Page</title>
 </head>
