--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/3031bdf29d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Aromusk | Product Landing Page</title>
 </head>
 
@@ -104,7 +105,7 @@
 
     <div class="product container-fluid p-5 text-center" id="product">
         <h3 class="p-2 bg-success rounded text-light">Products</h3>
-        <div class="product-display row row-cols-auto justify-content-center m-4">
+        <div class="product-display row row-cols-auto justify-content-center m-4  animate__animated animate__fadeInUp">
             <div class="col m-4">
                 <div class="card h-100">
                     <img src="images/product1.jpg" alt="product1" class="card-img-top" width="100px" height="200px" />
@@ -253,7 +254,7 @@
 
     <div class="service container-fluid p-5 text-center" id="service">
         <h3 class="p-2 bg-primary rounded text-light">Services</h3>
-        <div class="service-display row justify-content-center m-4">
+        <div class="service-display row justify-content-center m-4 animate__animated animate__flipInX">
             <div class="col m-4">
                 <div class="card h-100 bg-light">
                     <div class="service-img">
@@ -309,7 +310,7 @@
 
     <div class="feedback container-fluid p-5 text-center">
         <h3 class="p-2 bg-info rounded text-light">Feedbacks</h3>
-        <div class="feedback-display row justify-content-center text-center m-4">
+        <div class="feedback-display row justify-content-center text-center m-4 animate__animated animate__zoomIn">
             <div class="col m-4">
                 <img src="images/customer1.jpg" alt="customer1" class="rounded-circle" width="180px" height="180px" />
                 <h5 class="text-danger mt-4">Daniel Moses</h5>
